--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "auto": "^10.43.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "prefixer": "^0.0.3",
     "tailwindcss": "^3.2.7"
   }
